fix: trying ubuntu

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    container:
-      image: debian
+    container: ubuntu
     permissions:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
