--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test:postgres:setup": "npm exec prisma migrate deploy -- --schema ./test/postgres/prisma/schema.prisma && npm exec prisma generate -- --schema ./test/postgres/prisma/schema.prisma",
     "test": "node --require ts-node/register ./test/index.ts",
-    "build": "tsc"
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.build.json"
   },
   "keywords": [
     "prisma",
@@ -31,6 +32,7 @@
     "@types/node": "^20.7.1",
     "glob": "^10.3.10",
     "prisma": "^5.3.1",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
